<resources>
    <string name="app_name">player with fragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="song_name">Track02734797</string>
    <string name="song_start">00:00</string>
    <string name="song_end">00:00</string>
    <string name="next_bt">next_button</string>
    <string name="preve_bt">previous_button</string>
    <string name="puase_bt">pause</string>
    <string name="shuffle_bt">shuffle</string>
    <string name="fav_bt">fav</string>
    <string name="option_bt">option</string>
    <string name="library_bt">library</string>
    <string name="music_image">music_image</string>
    <string name="playListTittle">Add to playlist</string>
    <string name="addToFavorite">Add to favorite</string>
    <string name="removeFromPlaylist">Remove from playlist</string>
    <string name="addToPlayList">add to PlayList </string>
    <string name="playListName">Playlist name</string>
    <string name="songCount">0 songs</string>
    <string name="createPlayList">New</string>
    <string name="removeFromFavorite">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>


</resources>