<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3sp"
    android:background="@color/back_ground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/play_list_image"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:background="#63454A"
        android:contentDescription="@string/music_image"
        android:src="@drawable/headphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:shapeAppearanceOverlay="@style/Rounded_corner" />

    <TextView
        android:id="@+id/play_list_name"

        android:layout_width="206dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/playListName"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/play_list_image"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/delete_bt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/library_bt"
        android:padding="4dp"
        android:src="@drawable/delete_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_list_name"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>