<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playList_card"
    style="@style/Rounded_corner"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="18dp"
    app:cardUseCompatPadding="true"
  app:cardElevation="4dp"
    android:fadingEdgeLength="3dp"
    android:paddingVertical="15dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_ground">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/play_list_image_1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/music_image"
            android:src="@drawable/headphone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Rounded_border" />

        <TextView
            android:id="@+id/play_list_name_1"
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:text="@string/playListName"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/play_list_image_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622" />

        <ImageButton
            android:id="@+id/delete_bt_1"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"

            android:contentDescription="@string/library_bt"
            android:padding="4dp"
            android:src="@drawable/delete_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.673"
            app:layout_constraintStart_toEndOf="@+id/play_list_name_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.596" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>